@@ -20,15 +20,24 @@
 #include <caml/memory.h>
 #include <caml/osdeps.h>
 
-#include <Windows.h>
-#include <stdlib.h>
+#include <windows.h>
 
+/* Win32 doesn't have a notion of setuid bit. */
 CAMLprim value unix_environment(value unit)
 {
-  /* Win32 doesn't have a notion of setuid bit, so accessing environ is safe. */
-  if (_wenviron != NULL) {
-    return caml_alloc_array((void *)caml_copy_string_of_utf16, (const char**)_wenviron);
-  } else {
-    return Atom(0);
+  CAMLparam0();
+  CAMLlocal2(v, result);
+  wchar_t * envp, * p;
+  int size, i;
+
+  envp = GetEnvironmentStrings();
+  for (p = envp, size = 0; *p; p += wcslen(p) + 1) size++;
+  result = caml_alloc(size, 0);
+  for (p = envp, i = 0; *p; p += wcslen(p) + 1) {
+    v = caml_copy_string_of_utf16(p);
+    Store_field(result, i ++, v);
   }
+  FreeEnvironmentStrings(envp);
+
+  CAMLreturn(result);
 }
